--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,42 @@
 target/
 *.gif
 *.txt
+
+# Maven target 目录
+/target/
+
+# 日志文件
+*.log
+
+# 编译生成的类文件
+*.class
+
+# IDE 配置文件
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Eclipse 配置
+.project
+.classpath
+.settings/
+
+# VS Code 配置
+.vscode/
+
+# 操作系统文件
+.DS_Store
+Thumbs.db
+
+# 临时文件
+*.tmp
+*.bak
+
+# 包管理器生成文件
+node_modules/
+
+# 其他常见忽略
+*.jar
+*.war
+*.ear
